Updated form button style to prevent text cut off, added some form fields and check code to routes for new forms

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -114,7 +114,6 @@ footer {
     padding: 0.5em; 
     background-color: white;
     border-radius: .25em;
-    width: 7em;
 }
 
 .input-submit:hover {
